--- a/Arduino_Code/platformio.ini
+++ b/Arduino_Code/platformio.ini
@@ -13,6 +13,4 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 monitor_echo = true
-lib_deps = 
-	andrealombardo/L298N@^2.0.3
-	paulstoffregen/Encoder@^1.4.4
+lib_deps = paulstoffregen/Encoder@^1.4.4
