--- a/my_package/my_package/nav2_config.yaml
+++ b/my_package/my_package/nav2_config.yaml
@@ -260,7 +260,7 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.22
+      footprint: "[[0.19 0.1686], [0.19, -0.1686], [-0.19 -0.1686], [-0.19 0.1686]]"
       resolution: 0.05
       track_unknown_space: false
       rolling_window: false
@@ -300,7 +300,7 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.22
+      footprint: "[[0.19 0.1686], [0.19, -0.1686], [-0.19 -0.1686], [-0.19 0.1686]]"
       plugins: ["voxel_layer", "inflation_layer"]
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
@@ -323,3 +323,13 @@ local_costmap:
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
       always_send_full_costmap: True
+planner_server:
+  ros__parameters:
+    planner_plugins: ['GridBased']
+    GridBased:
+      plugin: 'nav2_navfn_planner::NavfnPlanner' 
+controller_server:
+  ros__parameters:
+    controller_plugins: ["FollowPath"]
+    FollowPath:
+       plugin: "dwb_core::DWBLocalPlanner"
